# sdl3-gpu-minimal

./: .clangd  CMakeLists.txt  CMakePresets.json  ReadMe.md  raw_triangle.vs.hlsl  sdl3-min-src.cpp  vcpkg.json
shaders/: grid.fs.hlsl  grid.vs.hlsl  instanced_mesh.vs.hlsl  instanced_shapes.vs.hlsl  textured_mesh.vs.hlsl  textured_quad.fs.hlsl  textured_quad.vs.hlsl  vertex_buffer_triangle.vs.hlsl
src/: io.cppm  logs.cppm  main.cpp  sdl3-init.cppm  sdl3-scene.cppm
